--- a/rnd/Makefile.am
+++ b/rnd/Makefile.am
@@ -30,7 +30,21 @@ ACLOCAL_AMFLAGS = -I m4
 
 check_PROGRAMS = \
 	src/rnd/automaton.test src/rnd/nexpr.test src/rnd/zsymbols.test \
-	src/regexp/regexp.test
+	src/regexp/regexp.test src/rnd/minauto.test
+
+src_rnd_minauto_test_SOURCES = \
+	src/rnd/minauto.test.cpp \
+	src/rnd/automaton.hpp \
+	src/rnd/automaton.cpp \
+	src/rnd/minauto.hpp \
+	src/rnd/minauto.cpp \
+	src/rnd/nexpr.hpp \
+	src/rnd/nexpr.cpp \
+	src/rnd/zsymbols.hpp \
+	src/rnd/zsymbols.cpp \
+	../tools/handles.hpp
+
+src_rnd_minauto_test_CPPFLAGS = -I$(top_srcdir)/../tools -I$(top_srcdir)/src
 
 src_rnd_automaton_test_SOURCES = \
 	src/rnd/automaton.hpp \
