--- a/rnd/Makefile.am
+++ b/rnd/Makefile.am
@@ -29,7 +29,7 @@ include_HEADERS = include/regexp.h
 ACLOCAL_AMFLAGS = -I m4
 
 check_PROGRAMS = \
-	src/rnd/automaton.test src/rnd/nexpr.test src/rnd/zsymbols.test \
+	src/rnd/nexpr.test src/rnd/zsymbols.test \
 	src/regexp/regexp.test src/rnd/minauto.test
 
 src_rnd_minauto_test_SOURCES = \
@@ -45,18 +45,6 @@ src_rnd_minauto_test_SOURCES = \
 	../tools/handles.hpp
 
 src_rnd_minauto_test_CPPFLAGS = -I$(top_srcdir)/../tools -I$(top_srcdir)/src
-
-src_rnd_automaton_test_SOURCES = \
-	src/rnd/automaton.hpp \
-	src/rnd/automaton.cpp \
-	src/rnd/automaton.test.cpp \
-	src/rnd/nexpr.hpp \
-	src/rnd/nexpr.cpp \
-	src/rnd/zsymbols.hpp \
-	src/rnd/zsymbols.cpp \
-	../tools/handles.hpp
-
-src_rnd_automaton_test_CPPFLAGS = -I$(top_srcdir)/../tools -I$(top_srcdir)/src
 
 src_rnd_nexpr_test_SOURCES = \
 	src/rnd/nexpr.hpp \
