--- a/scangen/test/python/Makefile
+++ b/scangen/test/python/Makefile
@@ -1,2 +1,2 @@
-output/scanners.py:	templates/template.py templates/scanner.py
+output/scanners.py:	templates/template.py templates/recognizer.py
 	python ../example.py template.py -d templates > $@ 
