Rename scangen test output files

--- a/scangen/test/dot/Makefile
+++ b/scangen/test/dot/Makefile
@@ -1,10 +1,10 @@
 .PHONY:	all
-all:	output/scanners.dot scanner.pdf
+all:	output/scanner.dot scanner.pdf
 
-output/scanners.dot:	templates/template.dot
+output/scanner.dot:	templates/template.dot
 	python ../example.py template.dot -d templates > $@
 
-scanner.pdf:	output/scanners.dot
+scanner.pdf:	output/scanner.dot
 	dot -Tpdf $< -o $@	
 
 .PHONY:	clean
