Update sagl scanner template

--- a/sagl/tools/Makefile
+++ b/sagl/tools/Makefile
@@ -1,2 +1,2 @@
-../src/scanner.hpp:	generate_scanner.py templates/template.cpp templates/scanner.cpp
+../src/scanner.hpp:	generate_scanner.py templates/template.cpp templates/recognizer.cpp
 	python $< template.cpp -d templates > $@
