--- a/rnd/CMakeLists.txt
+++ b/rnd/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library(regexp SHARED
 	src/regexp/regexp.cxx)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS False)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(PUBLIC_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
 list(APPEND PRIVATE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/src")
