Add json serializer to table generator

--- a/sagl/CMakeLists.txt
+++ b/sagl/CMakeLists.txt
@@ -17,4 +17,11 @@ target_include_directories(main PUBLIC
     ${PROJECT_SOURCE_DIR}/include
     ${PROJECT_SOURCE_DIR}/../tools)
 
+add_executable(json src/json.cpp)
+
+target_include_directories(json PUBLIC
+    ${PROJECT_SOURCE_DIR}/include
+    ${PROJECT_SOURCE_DIR}/../tools)
+
 set_property(TARGET main PROPERTY CXX_STANDARD 17)
+set_property(TARGET json PROPERTY CXX_STANDARD 17)
