--- a/rnd/CMakeLists.txt
+++ b/rnd/CMakeLists.txt
@@ -2,77 +2,72 @@ cmake_minimum_required(VERSION 3.13)
 
 project(
     rnd
-    VERSION 0.4
+    VERSION 0.5
     DESCRIPTION "Convert regular expression to finite state machine"
     LANGUAGES CXX C
 )
 
-add_library(regexp SHARED
-	src/rnd/automaton.cpp
-	src/rnd/nexpr.cpp
-	src/rnd/zsymbols.cpp
-	src/regexp/regexp.cxx
-    ../sagl/src/sagl/tabulate.cpp)
+add_library(rnd SHARED
+	src/rnd/internals/automaton.cpp
+	src/rnd/internals/nexpr.cpp
+	src/rnd/internals/zsymbols.cpp
+	src/rnd/rnd.cxx)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-set(PUBLIC_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
-list(APPEND PRIVATE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/src")
-list(APPEND PRIVATE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/src/regexp")
-list(APPEND PRIVATE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/../tools")
-list(APPEND PRIVATE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/../sagl/include")
+set(RND_PUBLIC_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
+set(RND_PRIVATE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/src")
 
-target_include_directories(regexp
-    PUBLIC ${PUBLIC_INCLUDE_DIRS}
-    PRIVATE ${PRIVATE_INCLUDE_DIRS})
+target_include_directories(rnd
+    PUBLIC "${RND_PUBLIC_INCLUDE_DIRS}"
+    PRIVATE "${RND_PRIVATE_INCLUDE_DIRS}")
 
-install(TARGETS regexp DESTINATION lib)
-install(FILES include/regexp.h DESTINATION include)
+install(TARGETS rnd DESTINATION lib)
+install(FILES include/rnd.h DESTINATION include)
 
 add_executable(nexpr.test
-	src/rnd/nexpr.cpp
-	src/rnd/nexpr.test.cpp
-	src/rnd/zsymbols.cpp)
+	src/rnd/internals/nexpr.cpp
+	src/rnd/internals/nexpr.test.cpp
+	src/rnd/internals/zsymbols.cpp)
 
 target_include_directories(nexpr.test
-    PUBLIC ${PUBLIC_INCLUDE_DIRS}
-    PRIVATE ${PRIVATE_INCLUDE_DIRS})
+    PUBLIC "${RND_PUBLIC_INCLUDE_DIRS}"
+    PRIVATE "${RND_PRIVATE_INCLUDE_DIRS}")
 
 add_executable(zsymbols.test
-	src/rnd/zsymbols.cpp
-	src/rnd/zsymbols.test.cpp)
+	src/rnd/internals/zsymbols.cpp
+	src/rnd/internals/zsymbols.test.cpp)
 
 target_include_directories(zsymbols.test
-    PUBLIC ${PUBLIC_INCLUDE_DIRS}
-    PRIVATE ${PRIVATE_INCLUDE_DIRS})
+    PUBLIC "${RND_PUBLIC_INCLUDE_DIRS}"
+    PRIVATE "${RND_PRIVATE_INCLUDE_DIRS}")
 
-add_executable(regexp.test
-    src/regexp/regexp.test.c
-	src/regexp/regexp.cxx
-	src/rnd/automaton.cpp
-    src/rnd/nexpr.cpp
-    src/rnd/zsymbols.cpp
-    ../sagl/src/sagl/tabulate.cpp)
+add_executable(rnd.test
+    src/rnd/rnd.test.c
+	src/rnd/rnd.cxx
+	src/rnd/internals/automaton.cpp
+    src/rnd/internals/nexpr.cpp
+    src/rnd/internals/zsymbols.cpp)
 
-target_include_directories(regexp.test
-    PUBLIC ${PUBLIC_INCLUDE_DIRS}
-    PRIVATE ${PRIVATE_INCLUDE_DIRS})
+target_include_directories(rnd.test
+    PUBLIC "${RND_PUBLIC_INCLUDE_DIRS}"
+    PRIVATE "${RND_PRIVATE_INCLUDE_DIRS}")
 
 add_executable(automaton.test
-	src/rnd/automaton.test.cpp
-	src/rnd/automaton.cpp
-	src/rnd/minauto.cpp
-	src/rnd/nexpr.cpp
-	src/rnd/zsymbols.cpp)
+	src/rnd/internals/automaton.test.cpp
+	src/rnd/internals/automaton.cpp
+	src/rnd/internals/minauto.cpp
+	src/rnd/internals/nexpr.cpp
+	src/rnd/internals/zsymbols.cpp)
 
 target_include_directories(automaton.test
-    PUBLIC ${PUBLIC_INCLUDE_DIRS}
-    PRIVATE ${PRIVATE_INCLUDE_DIRS})
+    PUBLIC "${RND_PUBLIC_INCLUDE_DIRS}"
+    PRIVATE "${RND_PRIVATE_INCLUDE_DIRS}")
 
-set_property(TARGET regexp PROPERTY CXX_STANDARD 17)
+set_property(TARGET rnd PROPERTY CXX_STANDARD 17)
 set_property(TARGET nexpr.test PROPERTY CXX_STANDARD 17)
-set_property(TARGET regexp.test PROPERTY CXX_STANDARD 17)
+set_property(TARGET rnd.test PROPERTY CXX_STANDARD 17)
 set_property(TARGET zsymbols.test PROPERTY CXX_STANDARD 17)
 set_property(TARGET automaton.test PROPERTY CXX_STANDARD 17)
 
@@ -80,4 +75,4 @@ enable_testing()
 add_test(nexpr.test nexpr.test)
 add_test(automaton.test automaton.test)
 add_test(zsymbols.test zsymbols.test)
-add_test(regexp.test regexp.test)
+add_test(rnd.test rnd.test)
