--- a/sagl/python/examples/Makefile
+++ b/sagl/python/examples/Makefile
@@ -2,7 +2,7 @@ CXX = g++
 CXXFLAGS = -g -Wall -Wextra -Werror -Wpedantic -std=c++17
 
 main:	main.cpp example.py
-	LD_LIBRARY_PATH=../../build python3 example.py
+	LD_LIBRARY_PATH="../../../rnd/build:../../build" python3 example.py
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -o $@ $<
 
 .PHONY:	clean
