Combine rnd and sagl directories

--- a/rnd/CMakeLists.txt
+++ b/rnd/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(
-    rnd
+project(ibex
     VERSION 0.5
-    DESCRIPTION "Convert regular expression to finite state machine"
+    DESCRIPTION "Parser generator"
     LANGUAGES CXX C
 )
+
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_library(rnd SHARED
 	src/rnd/internals/automaton.cpp
@@ -13,18 +15,12 @@ add_library(rnd SHARED
 	src/rnd/internals/zsymbols.cpp
 	src/rnd/rnd.cxx)
 
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-
 set(RND_PUBLIC_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
 set(RND_PRIVATE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/src")
 
 target_include_directories(rnd
     PUBLIC "${RND_PUBLIC_INCLUDE_DIRS}"
     PRIVATE "${RND_PRIVATE_INCLUDE_DIRS}")
-
-install(TARGETS rnd DESTINATION lib)
-install(FILES include/rnd.h DESTINATION include)
 
 add_executable(nexpr.test
 	src/rnd/internals/nexpr.cpp
@@ -65,14 +61,38 @@ target_include_directories(automaton.test
     PUBLIC "${RND_PUBLIC_INCLUDE_DIRS}"
     PRIVATE "${RND_PRIVATE_INCLUDE_DIRS}")
 
+add_library(sagl SHARED src/sagl/sagl.cxx src/sagl/internals/tabulate.cpp)
+
+target_include_directories(sagl PRIVATE
+    ${PROJECT_SOURCE_DIR}/include
+    ${PROJECT_SOURCE_DIR}/src)
+
+add_executable(example examples/example.cpp src/sagl/internals/tabulate.cpp)
+
+list(APPEND INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR} $)
+
+target_include_directories(example PUBLIC
+    ${PROJECT_SOURCE_DIR}/src
+    ${PROJECT_SOURCE_DIR}/include)
+
 set_property(TARGET rnd PROPERTY CXX_STANDARD 17)
 set_property(TARGET nexpr.test PROPERTY CXX_STANDARD 17)
 set_property(TARGET rnd.test PROPERTY CXX_STANDARD 17)
 set_property(TARGET zsymbols.test PROPERTY CXX_STANDARD 17)
 set_property(TARGET automaton.test PROPERTY CXX_STANDARD 17)
+set_property(TARGET example PROPERTY CXX_STANDARD 17)
+set_property(TARGET sagl PROPERTY CXX_STANDARD 17)
 
 enable_testing()
 add_test(nexpr.test nexpr.test)
 add_test(automaton.test automaton.test)
 add_test(zsymbols.test zsymbols.test)
 add_test(rnd.test rnd.test)
+add_test("example test" "python3 tests/test.py")
+
+install(TARGETS rnd DESTINATION lib)
+install(FILES include/rnd.h DESTINATION include)
+install(TARGETS sagl DESTINATION lib)
+install(FILES include/sagl.h DESTINATION include)
+
+target_compile_options(example PUBLIC -g -Wall -Wextra -Wpedantic)
