Compile with stricter options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,4 +95,10 @@ install(FILES include/rnd.h DESTINATION include)
 install(TARGETS sagl DESTINATION lib)
 install(FILES include/sagl.h DESTINATION include)
 
-target_compile_options(example PUBLIC -g -Wall -Wextra -Wpedantic)
+target_compile_options(rnd PUBLIC -g -Wall -Wextra -Wpedantic -Werror)
+target_compile_options(nexpr.test PUBLIC -g -Wall -Wextra -Wpedantic -Werror)
+target_compile_options(rnd.test PUBLIC -g -Wall -Wextra -Wpedantic -Werror)
+target_compile_options(zsymbols.test  PUBLIC -g -Wall -Wextra -Wpedantic -Werror)
+target_compile_options(automaton.test PUBLIC -g -Wall -Wextra -Wpedantic -Werror)
+target_compile_options(example PUBLIC -g -Wall -Wextra -Wpedantic -Werror)
+target_compile_options(sagl PUBLIC -g -Wall -Wextra -Wpedantic -Werror)
